--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@savants/pisopay",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "a package to be used for online payments",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -25,6 +25,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "axios": "^1.1.3"
+    "axios": "^1.1.3",
+    "dotenv": "^16.0.3"
   }
 }
